<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Messaging</string>
    <string name="new_message">New message</string>
    <string name="create_new_message">Compose new message</string>
    <string name="menu_call_back">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_send_email">Send email to <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_add_address_to_contacts">Add <xliff:g id="name">%s</xliff:g> to Contacts</string>
    <string name="menu_call">Call</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_undelivered_messages">Undelivered messages</string>
    <string name="menu_view">View thread</string>
    <string name="refreshing">Refreshing\u2026</string>
    <string name="has_draft">Draft</string>
    <string name="broadcast_from_to"><xliff:g id="sender" example="me">%1$s</xliff:g> to <xliff:g id="recipient" example="Megan">%2$s</xliff:g></string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_picture">View picture</string>
    <string name="view_slideshow">View slideshow</string>
    <string name="view_message_details">View message details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete message</string>
    <string name="sent_on">"Sent: <xliff:g id="date">%s</xliff:g>"</string>
    <string name="expire_on">"Expires: <xliff:g id="date">%s</xliff:g>"</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">Unable to send this message.\nAttempt made: <xliff:g id="message">%s</xliff:g>.</string>
    <string name="undelivered_sms_dialog_body">Unable to send this message.</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="name_colon"><b><xliff:g id="name" example="Me">%s</xliff:g></b>": "</string>
    <string name="inline_subject">"&lt;Subject: <xliff:g id="subject">%s</xliff:g>&gt;"</string>
    <string name="drm_protected_text">"* DRM protected text *"</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="message_options">Message options</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Select to create new slide.</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part <xliff:g id="part">%1$s</xliff:g>/<xliff:g id="total">%2$s</xliff:g></string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="compose_title">Compose</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="all_threads">All threads</string>
    <string name="type_to_compose_text_enter_to_send">Type to compose</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to compose message</string>
    <string name="image_too_large">Picture too large</string>
    <string name="ask_for_automatically_resize">Automatically resize picture before sending?</string>
    <string name="compressing">Picture too large. Compressing\u2026</string>
    <string name="unsupported_media_format">Unsupported <xliff:g id="name">%1$s</xliff:g> format</string>
    <string name="select_different_media">Please select a different <xliff:g id="name">%1$s</xliff:g>.</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_add_media">Sorry, you cannot add this <xliff:g id="name">%1$s</xliff:g> to your message.</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="resize_image_error_information">Sorry, even when resized this picture is too large to send.</string>
    <string name="forward_prefix">Fwd:\u0020</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="has_invalid_recipient">Invalid recipient(s): &lt;<xliff:g id="name">%1$s</xliff:g>&gt;</string>
    <string name="invalid_destination">You have entered an invalid address.</string>
    <string name="invalid_recipient_message">Please correct the recipient(s) or they will not receive the message.</string>
    <string name="cannot_send_message">Cannot send this message</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="cannot_forward_drm_obj">The DRM object included in the message cannot be forwarded.</string>
    <string name="converting_to_picture_message">Converting to multimedia message\u2026</string>
    <string name="converting_to_text_message">Converting to text message\u2026</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">"Multimedia message (MMS) settings"</string>
    <string name="pref_sms_settings_title">"Text message (SMS) settings"</string>
    <string name="pref_sms_storage_title">Storage settings</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit"><xliff:g id="count">%1$s</xliff:g> messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Display message notifications in status bar</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string translatable="false" name="prefDefault_vibrateWhen">never</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="pref_title_save_location">Attachment save folder</string>
    <string name="pref_title_mms_notification_led_settings">LED settings</string>
    <string name="pref_title_mms_notification_led">Blink LED</string>
    <string name="pref_summary_mms_notification_led">Blink LED when message received</string>
    <string name="pref_title_mms_notification_led_color">LED color</string>
    <string name="pref_summary_mms_notification_led_color">Change LED color</string>
    <string name="pref_dialogtitle_mms_notification_led_color">Select your LED color</string>
    <string name="pref_title_mms_notification_led_blink_rate">LED blink rate</string>
    <string name="pref_summary_mms_notification_led_blink_rate">Change LED blink rate</string>
    <string name="pref_dialogtitle_mms_notification_led_blink_rate">Select your LED blink rate</string>
    <string name="pref_title_mms_notification_vibrate_settings">Vibrate settings</string>
    <string name="pref_title_mms_notification_vibrate_pattern">Vibrate pattern</string>
    <string name="pref_summary_mms_notification_vibrate_pattern">Change vibrate pattern</string>
    <string name="pref_title_mms_notification_vibrate_call">Vibrate on Call</string>
    <string name="pref_summary_mms_notification_vibrate_call">Allow vibrate while on a call</string>
	<string name="pref_extra_settings">Extra settings</string>
	<string name="pref_title_mms_back_to_all_threads">Back to all threads</string>
    <string name="pref_summary_mms_back_to_all_threads">Always go to all-threads when back button is pressed</string>
    <string name="pref_title_mms_fullscreen_landscape">Fullscreen Landscape</string>
    <string name="pref_summary_mms_fullscreen_landscape">Enable/disable fullscreen keyboard in landscape mode</string>
    <string name="pref_title_mms_send_on_enter">Send on Enter</string>
    <string name="pref_summary_mms_send_on_enter">Enable/disable send message when Enter key pressed</string>
    <string name="pref_title_mms_user_agent">Custom User-Agent</string>
    <string name="pref_summary_mms_user_agent">Spoof phone as a different model for MMS</string>
    <string name="pref_title_only_mobile_numbers">Only mobile numbers</string>
    <string name="pref_summary_only_mobile_numbers">Enable to only show mobile numbers in recipient field</string>
    <string name="pref_title_mms_email_addr_completion">Email address completion</string>
    <string name="pref_summary_mms_email_addr_completion">Enable/disable email address auto-completion into recipient field</string>
    <string name="pref_title_mms_black_background">Black Background</string>
    <string name="pref_summary_mms_black_background">Enable/disable black background\n(Restart Mms)</string>
    <string name="pref_title_mms_full_timestamp">Full timestamps</string>
    <string name="pref_summary_mms_full_timestamp">Enable to show both date and time in message timestamps</string>
    <string name="pref_title_mms_message_font_size">Message font size</string>
    <string name="pref_summary_mms_message_font_size">Change font size of message view</string>
    <string name="pref_dialogtitle_mms_message_font_size">Select font size</string>
</resources>