<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_sms_storage_title"
                      android:key="pref_key_storage_settings">
<!--
    <Preference android:key="pref_key_mms_clear_history"
                      android:title="@string/pref_mms_clear_search_history_title"
                      android:summary="@string/pref_mms_clear_search_history_summary" />
-->
     <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_auto_delete"
                      android:summary="@string/pref_summary_auto_delete"
                      android:title="@string/pref_title_auto_delete" />
    <Preference android:key="pref_key_sms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_sms_delete" />
    <Preference android:key="pref_key_mms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_mms_delete" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_sms_settings_title"
                      android:key="pref_key_sms_settings" >
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_sms_delivery_reports"
                      android:summary="@string/pref_summary_sms_delivery_reports"
                      android:title="@string/pref_title_sms_delivery_reports" />
    <Preference android:key="pref_key_manage_sim_messages"
                      android:summary="@string/pref_summary_manage_sim_messages"
                      android:title="@string/pref_title_manage_sim_messages" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_mms_settings_title"
                      android:key="pref_key_mms_settings">
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_delivery_reports"
                      android:summary="@string/pref_summary_mms_delivery_reports"
                      android:title="@string/pref_title_mms_delivery_reports" />
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_read_reports"
                      android:summary="@string/pref_summary_mms_read_reports"
                      android:title="@string/pref_title_mms_read_reports" />
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_mms_auto_retrieval"
                      android:title="@string/pref_title_mms_auto_retrieval"
                      android:summary="@string/pref_summary_mms_auto_retrieval" />
    <CheckBoxPreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_mms_auto_retrieval"
                        android:defaultValue="false"
                        android:key="pref_key_mms_retrieval_during_roaming"
                        android:title="@string/pref_title_mms_retrieval_during_roaming"
                        android:summary="@string/pref_summary_mms_retrieval_during_roaming" />
    <EditTextPreference
                        android:key="pref_save_location"
                        android:title="@string/pref_title_save_location"
                        android:summary=""
                        android:dialogTitle="@string/pref_title_save_location"
                        android:defaultValue="download" />
  </PreferenceCategory>
  <!-- Faruq: CyanogenMod poison -->
  <PreferenceCategory android:title="@string/pref_notification_settings_title">
    <CheckBoxPreference android:key="pref_key_enable_notifications"
                        android:title="@string/pref_title_notification_enabled"
                        android:summary="@string/pref_summary_notification_enabled"
                        android:defaultValue="true" />
    <PreferenceScreen android:key="pref_key_mms_notification_settings"
                      android:dependency="pref_key_enable_notifications"
                      android:title="@string/pref_notification_settings_title">
        <PreferenceCategory android:title="@string/pref_notification_settings_title">
          <RingtonePreference android:layout="?android:attr/preferenceLayoutChild"
                              android:dependency="pref_key_enable_notifications"
                              android:key="pref_key_ringtone"
                              android:title="@string/pref_title_notification_ringtone"
                              android:ringtoneType="notification"
                              android:defaultValue="content://settings/system/notification_sound" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_title_mms_notification_led_settings">
          <CheckBoxPreference android:key="pref_key_mms_notification_led"
                              android:dependency="pref_key_enable_notifications"
                              android:defaultValue="true"
                              android:title="@string/pref_title_mms_notification_led"
                              android:summary="@string/pref_summary_mms_notification_led" />
          <ListPreference android:key="pref_key_mms_notification_led_color"
                          android:dependency="pref_key_mms_notification_led"
                          android:defaultValue="green"
                          android:title="@string/pref_title_mms_notification_led_color"
                          android:summary="@string/pref_summary_mms_notification_led_color"
                          android:entries="@array/pref_mms_notification_led_color_entries"
                          android:entryValues="@array/pref_mms_notification_led_color_values"
                          android:dialogTitle="@string/pref_dialogtitle_mms_notification_led_color" />
          <ListPreference android:key="pref_key_mms_notification_led_blink_rate"
                          android:dependency="pref_key_mms_notification_led"
                          android:defaultValue="2"
                          android:title="@string/pref_title_mms_notification_led_blink_rate"
                          android:summary="@string/pref_summary_mms_notification_led_blink_rate"
                          android:entries="@array/pref_mms_notification_led_blink_rate_entries"
                          android:entryValues="@array/pref_mms_notification_led_blink_rate_values"
                          android:dialogTitle="@string/pref_dialogtitle_mms_notification_led_blink_rate" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_title_mms_notification_vibrate_settings">
          <ListPreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_enable_notifications"
                        android:key="pref_key_vibrateWhen"
                        android:defaultValue="@string/prefDefault_vibrateWhen"
                        android:title="@string/pref_title_notification_vibrateWhen"
                        android:summary="@string/pref_summary_notification_vibrateWhen"
                        android:entries="@array/prefEntries_vibrateWhen"
                        android:entryValues="@array/prefValues_vibrateWhen"
                        android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
          <ListPreference android:key="pref_key_mms_notification_vibrate_pattern"
                          android:dependency="pref_key_vibrateWhen"
                          android:defaultValue=""
                          android:title="@string/pref_title_mms_notification_vibrate_pattern"
                          android:summary="@string/pref_summary_mms_notification_vibrate_pattern"
                          android:entries="@array/pref_mms_notification_vibrate_pattern_entries"
                          android:entryValues="@array/pref_mms_notification_vibrate_pattern_values"
                          android:dialogTitle="@string/pref_title_mms_notification_vibrate_pattern" />
          <CheckBoxPreference android:key="pref_key_mms_notification_vibrate_call"
                          android:dependency="pref_key_enable_notifications"
                          android:defaultValue="true"
                          android:title="@string/pref_title_mms_notification_vibrate_call"
                          android:summary="@string/pref_summary_mms_notification_vibrate_call" />
        </PreferenceCategory>
    </PreferenceScreen>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_extra_settings">
	<CheckBoxPreference android:key="pref_key_mms_fullscreen_landscape"
                        android:title="@string/pref_title_mms_fullscreen_landscape"
                        android:summary="@string/pref_summary_mms_fullscreen_landscape"
                        android:defaultValue="true" />
    <CheckBoxPreference android:key="pref_key_mms_send_on_enter"
                        android:title="@string/pref_title_mms_send_on_enter"
                        android:summary="@string/pref_summary_mms_send_on_enter"
                        android:defaultValue="true" />
    <CheckBoxPreference android:key="pref_key_mms_back_to_all_threads"
                        android:title="@string/pref_title_mms_back_to_all_threads"
                        android:summary="@string/pref_summary_mms_back_to_all_threads"
                        android:defaultValue="false" />
    <com.android.mms.preferences.UserAgentListPreference
                        android:key="pref_key_mms_user_agent"
                        android:defaultValue="default"
                        android:title="@string/pref_title_mms_user_agent"
                        android:summary="@string/pref_summary_mms_user_agent"
                        android:entries="@array/pref_mms_user_agent_entries"
                        android:entryValues="@array/pref_mms_user_agent_values"
                        android:dialogTitle="@string/pref_title_mms_user_agent" />
    <CheckBoxPreference android:key="pref_key_mms_only_mobile_numbers"
                        android:title="@string/pref_title_only_mobile_numbers"
                        android:summary="@string/pref_summary_only_mobile_numbers"
                        android:defaultValue="false" />
    <CheckBoxPreference android:key="pref_key_mms_email_addr_completion"
                        android:title="@string/pref_title_mms_email_addr_completion"
                        android:summary="@string/pref_summary_mms_email_addr_completion"
                        android:defaultValue="false" />
    <CheckBoxPreference android:key="pref_key_mms_black_background"
                        android:title="@string/pref_title_mms_black_background"
                        android:summary="@string/pref_summary_mms_black_background"
                        android:defaultValue="true" />
    <CheckBoxPreference android:key="pref_key_mms_full_timestamp"
                        android:title="@string/pref_title_mms_full_timestamp"
                        android:summary="@string/pref_summary_mms_full_timestamp"
                        android:defaultValue="true" />
    <ListPreference android:key="pref_key_mms_message_font_size"
                    android:defaultValue="18"
                    android:title="@string/pref_title_mms_message_font_size"
                    android:summary="@string/pref_summary_mms_message_font_size"
                    android:entries="@array/pref_mms_message_font_size_entries"
                    android:entryValues="@array/pref_mms_message_font_size_values"
                    android:dialogTitle="@string/pref_dialogtitle_mms_message_font_size" />
  </PreferenceCategory>
</PreferenceScreen>
